# matrix_free-

./: .gitignore  CMakeLists.txt
include/: adr_matrix_free_operator.hpp  adr_matrix_free_solver.hpp  adr_solver.hpp  convergence_test.hpp
python_utils/: Idontknowhowtocallthis.py
src/: main.cpp  main_matrix_free.cpp
